[tool.poetry]
name = "pygem"
version = "0.3.1"
description = "Python Glacier Evolution Model (PyGEM)"
authors = ["David Rounce <drounce@cmu.edu>,Brandon Tober <btober@cmu.edu>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "pygem", from = "src" }
]

[tool.poetry.urls]
documentation = "https://pygem.readthedocs.io/"
repository = "https://github.com/drounce/PyGEM"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PyYAML = "^6.0.2"
salem = "^0.3.11"
tables = "^3.10.1"
geopandas = "^1.0.1"
xarray = "^2024.10.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
rasterio = "^1.4.2"
pyproj = "^3.7.0"
torch = "^2.5.1"
gpytorch = "^1.13"
scikit-learn = "^1.5.2"
tqdm = "^4.66.6"
jupyter = "^1.1.1"
arviz = "^0.20.0"

[tool.poetry.scripts]
setup = "pygem.bin.op.setup:main"
run_calibration_icethickness_consensus = "pygem.bin.run.run_calibration_icethickness_consensus:main"
run_calibration_frontalablation = "pygem.bin.run.run_calibration_frontalablation:main"
run_calibration = "pygem.bin.run.run_calibration:main"
run_mcmc_priors = "pygem.bin.run.run_mcmc_priors:main"
run_simulation = "pygem.bin.run.run_simulation:main"
process_monthly_thickness = "pygem.bin.postproc.process_monthly_thickness:main"
process_monthly_mass = "pygem.bin.postproc.process_monthly_mass:main"
distribute_ice = "pygem.bin.postproc.distribute_ice:main"
compile_simulations = "pygem.bin.postproc.compile_simulations:main"
list_failed_simulations = "pygem.bin.op.list_failed_simulations:main"
duplicate_gdirs = "pygem.bin.op.duplicate_gdirs:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
