[metadata]
name = pygem
version = 0.2.3
description = Python Glacier Evolution Model
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/drounce/PyGEM
author = David Rounce
author_email = drounce@cmu.edu
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/drounce/PyGEM

[options]
platforms = any
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    shapely
    requests
    configobj
    netcdf4
    xarray

[options.packages.find]
exclude = docs

[bdist_wheel]
universal = 1